examples/test/testpolicy16481.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16481
  namespace: namespace241
spec:
  podSelector:
    matchLabels:
      key15: value42
      key6: value22
      key29: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value48
          key1: value0
          key29: value23
      podSelector:
        matchLabels:
          key44: value6
          key17: value38
          key1: value12
